Fix footer alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,7 +351,7 @@ footer {
 
 .social-links i {
     font-size: 3rem;
-    padding: 2rem;
+    padding: 1.8%;
     color: white;
     transition: 0.3s;
 }
@@ -418,7 +418,6 @@ footer {
     .cityinfo h3 {
         margin-top: 1rem;
         margin-bottom: 1.5rem;
-       
     }
 
     /* make gallery single comumn on small screens */
@@ -428,6 +427,18 @@ footer {
 
     /* reduce large font size in stats section*/
     #stats li {
+        font-size: 1.5rem;
+    }
+
+    /* reposition signup form for newsletter*/
+    .newsletter-form {
+        margin: 10% 10% 0 0;
+        top: 10%;
+        left: 20%;
+        padding: 10px;
+    }
+
+    .newsletter-form h2 {
         font-size: 1.5rem;
     }
 
